Minor fix in order to solve the white space bug of BootStrap Grid system.

--- a/gallery.css
+++ b/gallery.css
@@ -18,4 +18,5 @@ body {
 footer {
     background-color: rgb(248, 248, 248);
     padding: 1rem;
+    text-align: center;
 }
